Fix header and footer on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
   margin: 0;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -17,6 +21,7 @@ body {
   color: #102a43;
   font-family: lato, serif;
   font-size: 1.2rem;
+  height: 100%;
 }
 
 code {
