--- a/src/styles/Cart.module.css
+++ b/src/styles/Cart.module.css
@@ -1,7 +1,7 @@
 .cartContainer {
   display: flex;
   padding: 40px;
-  min-height: 80vh;
+  min-height: 100vh;
   gap: 30px;
   flex-direction: column;
   align-items: center;
@@ -41,4 +41,12 @@
 
 .checkoutBtn:active {
   border: 1px solid white;
+}
+
+@media (max-width: 600px) {
+  .cartContainer {
+    min-height: 100vh;
+  }
+
+  /* .checkoutBtn */
 }
