--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -49,5 +49,10 @@
   }
   .section {
     display: block;
+    padding: 10px;
+  }
+
+  .h1 {
+    margin-bottom: 16px;
   }
 }
